# mlops

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  dockerfile  model_lstm_NP.ckpt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  vertex_config.yaml  wandb.docker
.dvc/: config
.github/workflows/: lint.yml  pre-commit.yaml  tests.yml  update_pre_commit.yaml
data/grouped/: BE_test.csv.dvc  BE_train.csv.dvc  DE_test.csv.dvc  DE_train.csv.dvc  FR_test.csv.dvc  FR_train.csv.dvc  NP_test.csv.dvc  NP_train.csv.dvc  PJM_test.csv.dvc  PJM_train.csv.dvc
data/raw/: BE.csv.dvc  DE.csv.dvc  FR.csv.dvc  NP.csv.dvc  PJM.csv.dvc
docs/: conf.py
mlops/: README.md  setup.py
mlops/src/data/: make_dataset.py
models/: model_lstm_['DE', 'NP', 'BE'].ckpt
notebooks/: inference_test.ipynb
reports/: README.md  report.html
src/: app.py  monitor_drift.py
src/data/: make_dataset.py
src/features/: rnn_data.py
src/models/: gru_sweep.yaml  lstm_sweep.yaml  rnn.py  rnn_config.yaml  rnn_sweep.yaml  train_model.py  train_rnn.py  xgb_config.yaml
tests/: test_rnn_data.py  test_train_rnn.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
