[project]
name = "mlops"
version = "0.1.0"
description = "A project where we will be working on machine learning operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uv>=0.9.22",
    "xgboost>=3.1.2",
]
