[project]
name = "mlops"
version = "0.1.0"
description = "A project where we will be working on machine learning operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uv>=0.9.22",
    "xgboost>=3.1.2",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "typer>=0.9.0",
        "matplotlib>=3.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]



[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
make_data = "src.data.make_dataset:main"
train_rnn = "src.models.train_rnn:train"
rnn_data = "src.features.rnn_data:main"
